	menus do not work.
	All other users on Intel machines (99,9% I think) can use this version.


v0.37.2		23-Feb-2003.

	general:
		System prepared for setting the official FTSC product code,
		this will be 0x11FF. The code is not yet activated.

	common.a:
		New function to get the real case of a filename.

	mbfido:
		Finding the inbound tic file now uses the new function.

	examples:
		Removed the last menu item from the offline menu, added new
		Extended Info toggle (English only).
		Updated offline textfiles to remove point download and add
		new Extended Info toggle (English only).

	mbsebbs:
		Offline reader, the reply packets are now handled complete
		case insensitive.
		Dropped BlueWave v2 format completly, obsolete format.
		The BlueWave and QWK download packets can have kludges, this
		depends on a setting in the userbase.
		In downloaded netmail, if message comes from a point, the FMPT
		kludge is allways included in the message.
		Added some forgotten checks for a valid QWK board name.
		Lots of code cleanups in the offline code.
		Added menu 320, toggle Offline Reader Extended Info.
		Added new control code: control-U + 8, this displays YES or NO
		for the new Extended Info setting.
		The display file functio now displays the ^U8 code.
		Added support for door32.sys dropfile.

	lang:
		Changed language prompts 15 and 16.


v0.37.1		14-Jan-2003 - 23-Feb-2003

	upgrade:
		After installing the binaries, start mbsetup, enter menu 1 and
		leave that and save it. This will set the default rules 
		directory, here we will store the area rules of all echomail
		areas.
		After upgrade you may remove ~/etc/maptabs and it's contents.
		After upgrade you may remove ~/etc/bank.data.
		After upgrade you may remove ~/etc/safe.data.
		If you want, download and install the nu-door and safe-door
		packages.

	general:
		This version may be used on production systems, but be 
		carefull and check your logs.
		Spanish templates and macros added to the examples.